# hack-computer

./: .gitignore  CMakeLists.txt  README.md  architecture.md
assembler/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  architecture.cpp  architecture.h  language.cpp  language.h
disassembler/: CMakeLists.txt  main.cpp
emulator/: CMakeLists.txt  computer.cpp  computer.h  main.cpp
examples/: divide.asm  lshift.asm  mutliply.asm
